# aplicaoPdiNaPratica

./: README.md  pyproject.toml
dila_ero/: abertura.py  binary.py  dilatacao.py  erosao.py  fechamento.py
furrier/: apply_filter_hp.py  apply_filter_pb.py  codeTeacher.py  transf_freq.py
tests_aleatorios/: pTeste.py
