[tool.poetry]
name = "aplicaopdinapratica"
version = "0.1.0"
description = "PDI na pratica"
authors = ["NatanaelB <natanaelbezerra36@gmail.com>"]
license = "GNU3.0"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.9.0"
isort = "^5.10.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
